# html_fragmentize

./: .gitignore  README.md  pyproject.toml  source.html
html_fragmentize/: msg_split.py
tests/: conftest.py  test_msg_split.py
