[project]
name = "html-fragmentize"
version = "0.1.0"
description = ""
authors = [
    {name = "dzhumagulov",email = "zhumagulovtorokeldi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4 (>=4.12.3,<5.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

